--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "graphql": "^16.6.0",
     "next": "latest",
     "react": "18.1.0",
