--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "reactstrap": "^9.1.4"
+    "reactstrap": "^9.1.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
